src/test/ui/traits/trait-bounds-sugar.stderr
error[E0308]: mismatched types
  --> $DIR/trait-bounds-sugar.rs:12:7
   |
LL |     a(x);
   |       ^ expected trait `Foo + std::marker::Send`, found trait `Foo + std::marker::Sync`
   |
   = note: expected type `std::boxed::Box<(dyn Foo + std::marker::Send + 'static)>`
              found type `std::boxed::Box<(dyn Foo + std::marker::Sync + 'static)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
